@@ -1,5 +1,14 @@
 2006-09-11  Marius Vollmer  <marius.vollmer@nokia.com>
 
+	* src/repo.h (parse_quoted_word): Added prototype.
+	* src/main.cc (check_repositories, check_repositories_reply): New,
+	to check whether any repositories are defined and enabled and
+	either show the right info banner or call
+	maybe_refresh_package_cache.  them.
+	(make_install_applications_view, make_upgrade_applications_view):
+	Use check_repositories instead of maybe_refresh_package_cache.
+	(N30390)
+	
 	* src/util.cc (call_copy_cont): Replaced 'success' parameter with
 	GnomeVFSResult.  Removed 'show_error' parameter.  Use "no
 	connection" for ERROR_IO.  Updated all callers.
